--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="clear">清空</string>
 
     <string name="describe">描述</string>
+
+    <string name="additem">增加记录</string>
 </resources>
